[gd_scene load_steps=18 format=3 uid="uid://dncgepmkc4jf4"]

[ext_resource type="Script" path="res://Survivor/Player/player.gd" id="1_37q80"]
[ext_resource type="Texture2D" uid="uid://46t8pfhbl0rf" path="res://Ressources/Survivor/Texture/2024_01_11_0rq_Kleki (1).png" id="2_48bd0"]
[ext_resource type="PackedScene" uid="uid://banlu17oilm07" path="res://Survivor/Utility/hurt_box.tscn" id="3_gs51i"]
[ext_resource type="Texture2D" uid="uid://bs2276v4d3bl2" path="res://Ressources/Survivor/Texture/GUI/exp_background.png" id="4_pbpj5"]
[ext_resource type="Texture2D" uid="uid://u20d3kksvh3p" path="res://Ressources/Survivor/Texture/GUI/exp_progress.png" id="5_5ive2"]
[ext_resource type="FontFile" uid="uid://bfuff0okvjtp5" path="res://Ressources/Survivor/Font/tenderness.otf" id="6_okx7u"]
[ext_resource type="AudioStream" uid="uid://cg8m5jfdwy2yq" path="res://Ressources/Survivor/Audio/SoundEffect/levelup.ogg" id="7_wl7d2"]
[ext_resource type="Texture2D" uid="uid://cxdpufmisma1c" path="res://Ressources/Survivor/Texture/GUI/healthbar.png" id="8_flesq"]
[ext_resource type="Texture2D" uid="uid://bfsl2h4qratib" path="res://Ressources/Survivor/Texture/GUI/health.png" id="9_uker1"]
[ext_resource type="AudioStream" uid="uid://crrg4m0cfykip" path="res://Ressources/Survivor/Audio/SoundEffect/Victory.wav" id="10_rwm3p"]
[ext_resource type="AudioStream" uid="uid://b8mibmmlvpy2l" path="res://Ressources/Survivor/Audio/SoundEffect/Lose.ogg" id="11_28kfi"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Survivor/Utility/basic_button.tscn" id="12_i8esf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nffdp"]
radius = 4.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfi4i"]
size = Vector2(12, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_anwqc"]
radius = 370.951

[sub_resource type="CircleShape2D" id="CircleShape2D_p2554"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6vwp8"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_37q80")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_48bd0")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_nffdp")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_gs51i")]
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_yfi4i")

[node name="Attack" type="Node2D" parent="."]

[node name="BlasterTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="BlasterAttackTimer" type="Timer" parent="Attack/BlasterTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="droneTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="droneAttackTimer" type="Timer" parent="Attack/droneTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="laserSaberBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_anwqc")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_p2554")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_6vwp8")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.202753
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("4_pbpj5")
texture_progress = ExtResource("5_5ive2")
metadata/_edit_use_anchors_ = true

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.200748
anchor_right = 0.200748
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_okx7u")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 384.0
offset_top = 325.0
offset_right = 416.0
offset_bottom = 333.0
value = 50.0
texture_over = ExtResource("8_flesq")
texture_progress = ExtResource("9_uker1")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1200.0
offset_bottom = 550.0

[node name="lbl_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_okx7u")
theme_override_font_sizes/font_size = 25
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 180.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_wl7d2")
volume_db = -10.0
bus = &"FX"

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = -266.0
offset_right = 430.0
offset_bottom = -16.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_okx7u")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_rwm3p")
volume_db = -10.0
bus = &"Music"

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_28kfi")
volume_db = -10.0
bus = &"Music"

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_i8esf")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.100125
anchor_top = 0.00555556
anchor_right = 0.100125
anchor_bottom = 0.00555556
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_okx7u")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.739675
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10
metadata/_edit_use_anchors_ = true

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.740926
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10
metadata/_edit_use_anchors_ = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/BlasterTimer" to="." method="_on_Blaster_timer_timeout"]
[connection signal="timeout" from="Attack/BlasterTimer/BlasterAttackTimer" to="." method="_on_Blaster_attack_timer_timeout"]
[connection signal="timeout" from="Attack/droneTimer" to="." method="_on_drone_timer_timeout"]
[connection signal="timeout" from="Attack/droneTimer/droneAttackTimer" to="." method="_on_drone_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]

[editable path="HurtBox"]
